--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ fasthash = "0.4.0"
 serde = { version = "1.0.165", features = ["derive"] }
 thiserror = "1.0.60"
 human_bytes = { version = "0.4", default-features = false }
-inkwell = { version = "0.4", features = ["llvm17-0"] }
+inkwell = { version = "0.4", git = "https://github.com/TheDan64/inkwell.git", features = ["llvm18-0"] }
 
 [profile.release]
 opt-level = 3
